--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,99 @@
-.App {
+body{
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: azure;
+}
+.chat-container{
+  display: flex;
+  justify-content: space-between;
+  height: 100vh;
+  background-color: #fff;
+}
+
+
+
+.sidebar{
+  flex: 1;
+  background-color: #2c3e50;
+  color: #fff;
+  width: 30%;
+  border-right: 1px solid #e0e0e0;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.chat-area{
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-header{
+  background-color: #2c3e50;
+  color: #fff;
+  padding: 15px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.messages{
+  margin-bottom: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sent{
   display: flex;
-  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.recieved{
+  display: flex;
+  justify-content: flex-start;
+}
+
+.message-bubble{
+  max-width: 75%;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.sent .message-bubble{
+  background-color: cadetblue;
+  color: #fff;
+  border-bottom-right-radius: 0%;
+  margin-right: 30px;
+}
+
+.recieved .message-bubble{
+  background-color: antiquewhite;
+  margin-left: 30px;
+  border-bottom-left-radius: 0%;
+}
+
+
+.message-input{
+  background-color: rgb(107, 130, 150);
+  padding: 15px;
+  border-top: 1px solid #e0e0e0;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 55%;
 }
 
-.App-link {
-  color: #61dafb;
+.message-input textarea{
+  flex: 1;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  resize: none;
+  outline: none;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.message-input button{
+  background-color: #2c3e50;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  padding: 10px 20px;
+  margin-left: 15px;
 }
